p.figure_title added locally to article 4 and deleted from isaw-publications.css. Getting rid of the by before the autors

--- a/isaw-papers-4/isaw-papers-4.xhtml
+++ b/isaw-papers-4/isaw-papers-4.xhtml
@@ -46,7 +46,12 @@
  <link rel="dcterms:isPartOf" href="http://isaw.nyu.edu/publications/isaw-papers" />
  
 <link rel="stylesheet" href="isaw-publications.css"/>
-
+<style type="text/css">
+	
+	p.figure_title {
+  font-weight:bold
+}
+</style>
 </head>
 
 <body>
