first attempt at adding @media print in the css

--- a/isaw-papers-5/isaw-papers-5.xhtml
+++ b/isaw-papers-5/isaw-papers-5.xhtml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8" ?>
+
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" 
   xml:lang="en"
@@ -7,9 +8,8 @@
  
 <head>
  <title>A. McCollum. (2012). “A Syriac Fragment from ‘The Cause of All Causes’ on the Pillars of Hercules.” ISAW Papers 5.</title>
-
  <meta name="DCTERMS.identifier.DOI" content="2333.1/j9kd5302"/>
- <link rel="stylesheet" href="isaw-papers.css" />
+ <link rel="stylesheet" href="isaw-publications.css" />
  <link rel="dcterms:creator" href="http://viaf.org/viaf/96743024"/>
  <link rel="dcterms:isPartOf" resource="http://isaw.nyu.edu/publications/isaw-papers" />
 </head>
