correction of the encoding of the abstracts

--- a/isaw-papers-2/isaw-papers-2.xhtml
+++ b/isaw-papers-2/isaw-papers-2.xhtml
@@ -40,11 +40,11 @@
 </head>
 <body>
 <header>
-<h1><span rel="dcterms:isPartOf" resource="http://isaw.nyu.edu/publications/isaw-papers">ISAW Papers</span> 2 (2012)</h1>
+<h2><span rel="dcterms:isPartOf" resource="http://isaw.nyu.edu/publications/isaw-papers">ISAW Papers</span> 2 (2012)</h1>
 <h1 property="dcterms:title">Review of Ptolemaic Numismatics, 1996 to 2007</h1>
-<h1><span property="dcterms:creator">Catharine Lorber</span> and <span property="dcterms:creator">Andrew Meadows</span></h1>
+<h2><span property="dcterms:creator">Catharine Lorber</span> and <span property="dcterms:creator">Andrew Meadows</span></h1>
  <p class="doi" style="text-align: center;padding: 10px"><a rel="dcterms:identifier" href="http://doi.org/2333.1/9s4mw84w">http://doi.org/2333.1/9s4mw84w</a></p>
-<div id="abstract" property="dcterms:abstract"><em>Abstract:</em> <span>The authors review scholarship on Ptolemaic numismatics published between 1996 and 2007. They present the major conclusions of articles discussing the distribution, role in the economy, iconography, weights standards and other aspects of this important Hellenistic coinage.</span></div>
+<p class="abstract"><em>Abstract:</em> <span id="abstract" property="dcterms:abstract">The authors review scholarship on Ptolemaic numismatics published between 1996 and 2007. They present the major conclusions of articles discussing the distribution, role in the economy, iconography, weights standards and other aspects of this important Hellenistic coinage.</span></p>
   
  
 <p class="keywords"><strong>Keywords/Subjects:</strong>
