--- a/isaw-papers-5/isaw-papers-5.xhtml
+++ b/isaw-papers-5/isaw-papers-5.xhtml
@@ -22,7 +22,7 @@
 
  <p class="doi" style="text-align: center;padding: 10px"><a rel="dcterms:identifier" href="http://doi.org/2333.1/j9kd5302">http://doi.org/2333.1/j9kd5302</a></p>
 
- <div id="abstract"><em>Abstract:</em> <span>This brief note draws attention to a passage from the Syriac <i>Cause of All Causes</i> that describes the Pillars of Hercules, but as being three in number rather than two. The Syriac text in question has been well-known since it was published in 1889. This particular passage is studied and commented on here especially as it appears in a recently cataloged manuscript from Dayr Al-Za‘farān, in which the passage is completely divorced from its context in the <i>Cause of All Causes</i>.</span></div>
+ <p class="abstract"><em>Abstract: </em> <span id="abstract" property="dcterms:abstract">This brief note draws attention to a passage from the Syriac <i>Cause of All Causes</i> that describes the Pillars of Hercules, but as being three in number rather than two. The Syriac text in question has been well-known since it was published in 1889. This particular passage is studied and commented on here especially as it appears in a recently cataloged manuscript from Dayr Al-Za‘farān, in which the passage is completely divorced from its context in the <i>Cause of All Causes</i>.</span></p>
  
  <div id="subjects"><em>Subjects:</em> <a class="subject" rel="dcterms:subject" href="http://id.loc.gov/authorities/subjects/sh85080773" property="dcterms:subject">Manuscripts, Syriac</a>; <a class="subject" rel="dcterms:subject" href="http://id.loc.gov/authorities/subjects/sh85054012">Geography, Ancient</a>.</div>
  
