--- a/isaw-papers-6/isaw-papers-6.xhtml
+++ b/isaw-papers-6/isaw-papers-6.xhtml
@@ -33,7 +33,7 @@
 <h2><span property="dcterms:creator">Mantha Zarmakoupi</span></h2>
 
  <p class="doi" style="text-align: center;padding: 10px"><a rel="dcterms:identifier" href="http://doi.org/2333.1/51c5b1dw">http://doi.org/2333.1/51c5b1dw</a></p>
-<div class="abstract"><em>Abstract:</em> <span property="dcterms:abstract">This study examines recent archaeological evidence for the Quartier du Stade on Delos, which was newly formed after 167 CE. Analysis of the changes in the houses and the overall urban development of this neighborhood contribute to revealing the forces that shaped the city of Delos in this period, such as economy, politics, and ideology.</span></div>
+<p class="abstract"><em>Abstract: </em> <span id="abstract" property="dcterms:abstract">This study examines recent archaeological evidence for the Quartier du Stade on Delos, which was newly formed after 167 CE. Analysis of the changes in the houses and the overall urban development of this neighborhood contribute to revealing the forces that shaped the city of Delos in this period, such as economy, politics, and ideology.</span></p>
   
  
 <div id="subjects"><em>Subjects:</em> <a class="subject" rel="dcterms:subject" href="http://id.loc.gov/authorities/subjects/sh85036597" property="dcterms:subject">Delos Island (Greece)</a>, <a class="subject" rel="dcterms:subject" href="http://id.loc.gov/authorities/subjects/sh85040818" property="dcterms:subject">Economic history--To 500</a>.</div>
