ids for the figures

--- a/isaw-papers-3/isaw-papers-3.xhtml
+++ b/isaw-papers-3/isaw-papers-3.xhtml
@@ -303,7 +303,7 @@
 
 <p id="p49">Let’s examine another provenance of one of the sources used by Kessler and Temin: Antioch in Pisidia. This city is located in the Taurus range, at an altitude of 1200 m. (4000 ft.) and is separated from the sea by 200 kilometers of a hilly road, including a couple of steep climbs.<a class="endnotereference" id="endnoteref50" href="#endnote50"><sup>50</sup></a> Using a ratio of 1: 25 for relative sea: land transport costs,<a class="endnotereference" id="endnoteref51" href="#endnote51"><sup>51</sup></a> we would translate these 200 km into the equivalent of 5000 km, next to which the 1700 km or so of sea distance would be a minor factor.</p>
 
-<figure id="p49bis"><img id="map01" alt=""  src="images/map01.png" /> 
+<figure id="map01" ><img id="p49bis" alt=""  src="images/map01.png" /> 
         <!-- <object type="image/svg+xml" id="map01" data="images/map01.svg"></object> -->
     <figcaption id="p49bisbis">Map 1. Antioch in Pisidia – <span class="reference" rel="dcterms:references" typeof="dcterms:Location"><a rel="rdfs:isDefinedBy dcterms:identifier" href="https://pleiades.stoa.org/places/638778" property="rdfs:label">Attaleia</a></span> road. The map is copyright of the Pelagios Project and published under a Creative Commons Attribution 3.0 license (<a href="http://pelagios.dme.ait.ac.at/maps/greco-roman/about.html">About</a>).</figcaption>
 </figure>
@@ -344,7 +344,7 @@
 </tr>
 </table>
         
-<figure><img id="chart03" alt="" width="600"  src="images/chart03.png" /><figcaption>Chart 3. Distances from Rome with Lusitania and Asia Minor amended, and price for grain</figcaption></figure>
+<figure id="chart03"><img alt="" width="600" src="images/chart03.png" /><figcaption>Chart 3. Distances from Rome with Lusitania and Asia Minor amended, and price for grain</figcaption></figure>
 
 </div>
 
@@ -367,7 +367,7 @@
 
 <p id="p58">Chart 4 shows wheat prices measured for three different years in 31 different French cities:<a class="endnotereference" id="endnoteref61" href="#endnote61"><sup>61</sup></a></p>
 
-<figure id="p59" ><img id="chart04" alt="" width="509" height="265" src="images/chart04.png" /><figcaption id="p60">Chart 4.</figcaption></figure>
+<figure id="chart04"><img id="p59" alt="" width="509" height="265" src="images/chart04.png" /><figcaption id="p60">Chart 4.</figcaption></figure>
 
 
 <p id="p61">Paris represents the two last observations. There is some geographic consistency across time: the peaks occur in Provence and in the Alpine region. Paris is very close to the average price for each single year. Grain does not seem to travel from one region to another to take advantage of price gaps, since significant differences are witnessed even between very close locations inside the same regions.<a class="endnotereference" id="endnoteref62" href="#endnote62"><sup>62</sup></a></p>
@@ -434,7 +434,7 @@
 
 <p id="p89">The only way such a relationship can be systematically satisfied is if Rome, Pompeii, Judea, and Egypt are situated on the same linear path, since both factors would then equate to D<sub>(P-J)</sub>. If one of them is not, we are dealing with a triangle that has no reason whatsoever to satisfy that relationship, as the following chart shows:</p>
 
-<figure id="p90"><img id="unnumbered_figure01" alt="" width="455"  src="images/unnumbered_figure01.png"  /></figure>
+<figure  id="unnumbered_figure01"><img id="p90" alt="" width="455"  src="images/unnumbered_figure01.png"  /></figure>
 
 <p id="p91">In essence, the assumption that some regions are net importers of grain, competing at a more modest level against Rome as a consumption center, while not being geographically aligned, implies a multipolar set of linear relationships (effectively a matricial system) that cannot mathematically lead to one single linear relationship linking all these provinces together.<a class="endnotereference" id="endnoteref82" href="#endnote82"><sup>82</sup></a></p>
 
@@ -770,7 +770,7 @@ About 150 B.C.
 </tr>
 </table>
 
-<figure id="p161"><img id="chart05" alt="" width="600" src="images/chart05.png" /><figcaption id="p162">Chart 5. Distances from Rome and price for grain, with an enlarged sample of data (1: Lusitania, 2: Po valley, 3: Sicily, 4: Pompeii, 5: Fayum, 6: Palestine, 7: Antioch in Pisidia, 8: Veleia, 9: Forum Sempronii, 10: Lanuvium, 11: Terracina, 12: Sicca Veneria)</figcaption></figure>
+<figure id="chart05"><img id="p161" alt="" width="600" src="images/chart05.png" /><figcaption id="p162">Chart 5. Distances from Rome and price for grain, with an enlarged sample of data (1: Lusitania, 2: Po valley, 3: Sicily, 4: Pompeii, 5: Fayum, 6: Palestine, 7: Antioch in Pisidia, 8: Veleia, 9: Forum Sempronii, 10: Lanuvium, 11: Terracina, 12: Sicca Veneria)</figcaption></figure>
 
 
 <p id="p163">It is graphically obvious that the results will show a lower level of correlation when using the entire sample. We will therefore run two tests: first with these 12 data, and second by restricting a final sample to the broad Egypt-Rome trade axis, into which we incorporate Sicily and Africa.</p>
@@ -808,7 +808,7 @@ About 150 B.C.
 
 <p id="p164">If we now graphically plot the highest quality regression line from the most reduced sample we obtain the following chart:</p>
 
-<figure  id="p165"><img id="chart06" alt="" src="images/chart06.png" /><figcaption  id="p166" class="figure_title">Chart 6. Distances from Rome and price for grain, with a coastal sample of data</figcaption></figure>
+<figure id="chart06"><img id="p165" alt="" src="images/chart06.png" /><figcaption  id="p166" class="figure_title">Chart 6. Distances from Rome and price for grain, with a coastal sample of data</figcaption></figure>
 
 <p id="p167">The conclusions are quite straightforward. First of all, the linear relationship is much weaker when taking into account all available prices. The level of 79% of the variances obtained by Kessler and Temin is reached or overtaken only by careful sample selection limited to Rome, Latium, Campania, Sicily, Africa, and Egypt. The overall dataset leads to 56% of the variance being incorporated by the closest possible line. That should not come as a surprise and materializes the fact some of these locations had little to none long distance grain trading relationship. It of interest to note that similar results are achieved when numbers are drawn from the Standford University ORBIS Project (http://orbis.stanford.edu/), which appeared after the above calculations were complete.</p>
 
@@ -854,7 +854,7 @@ About 150 B.C.
 
 <p id="p187">After computing the distances to Rome, the new chart obtained by adding the additional Eastern locations shows as expected a less linear and as such a less integrated result.</p>
 
-<figure id="p188"><img id="chart07" alt="" width="600"  src="images/chart07.png" /><figcaption id="p189" class="figure_title">Chart 7. Distances from Rome and price for grain, with additional Eastern data</figcaption></figure>
+<figure id="chart07"><img id="p188" alt="" width="600"  src="images/chart07.png" /><figcaption id="p189" class="figure_title">Chart 7. Distances from Rome and price for grain, with additional Eastern data</figcaption></figure>
 
 
 <p id="p190">The picture that emerges is of a more multipolar economy, where a main trade axis does show up between some coastal regions aligned on a broad Egyptian-Italian axis, while other areas do not fit into any linear relationship with Rome.</p>
@@ -887,7 +887,7 @@ About 150 B.C.
 
 <p id="p202">To that extent, the Rome-Sicily-Africa-Egypt commercial axis within a generally more fragmented economic “Roman” world did not develop at the visible expense of the other areas. The dividends of the Roman peace would have globally financed the tributary extraction.</p>
 
-<figure id="p203"><img id="chart08" alt="" width="600"  src="images/chart08.png" /><figcaption id="p204">Chart 8. Distances from Rome and price for grain, regional patterns</figcaption></figure>
+<figure id="chart08"><img id="p203" alt="" width="600"  src="images/chart08.png" /><figcaption id="p204">Chart 8. Distances from Rome and price for grain, regional patterns</figcaption></figure>
 
 <p id="p205">Rather than an integrated single market for grain, the Empire would have been a combination of partially integrated regional or local markets, where the distance to the coastline would have been the main factor, while a major sea-trade axis linking the most productive areas to the most demanding consuming center would have emerged. As far as the role of the State is concerned, rather than by becoming a trading actor itself, it would have contributed to displace the market equilibrium towards a more politically desirable outcome by a combination of incentives and restrictions that would have been more effective than commonly thought.</p>
 
