--- a/isaw-papers-4/isaw-papers-4.xhtml
+++ b/isaw-papers-4/isaw-papers-4.xhtml
@@ -112,9 +112,9 @@ and <span rel="dcterms:creator"><a rel="dcterms:identifier" href="http://viaf.or
 
 <h3>1.2. The Fragments</h3>
 
-<figure id="figure1" rel="dcterms:hasPart" resource="#figure1">
+<figure id="figure01" rel="dcterms:hasPart" resource="#figure1">
 
-<img style="max-width:70%;align:center" id="figure01" alt="" src="images/figure01.jpg" />
+<img style="max-width:70%;align:center" alt="" src="images/figure01.jpg" />
 
 <figcaption><p id="p2" rel="dcterms:hasPart" resource="#p2" class="figure_title">Fig. 1 Both sides of Fragments A, B and C of the Antikythera Mechanism. ©2005 Antikythera Mechanism Research Project. All rights reserved.</p>
 
@@ -164,8 +164,8 @@ and <span rel="dcterms:creator"><a rel="dcterms:identifier" href="http://viaf.or
 <p id="p11" rel="dcterms:hasPart" resource="#p11">Improved readings of an inscription that was on the Mechanism's back cover and that described its external features and displays leave little room for doubt that the front display incorporated revolving pointers bearing little spheres to represent all five planets known in antiquity making their apparent motions around the Earth.<sup><a class="endnoteref" id="endnoteref18" href="#endnote18">18</a></sup></p>
 
 
-<figure id="figure2">
-<img alt="" src="images/figure02.png" id="img2" style="align:bottom" width="445" height="390" />
+<figure id="figure02">
+<img alt="" src="images/figure02.png" style="align:bottom" width="445" height="390" />
 
 <figcaption>
 <p id="p13" rel="dcterms:hasPart" resource="#p13" class="figure_title">Fig. 2 The Aristotelian <i>Cosmos</i> in Giovanni di Paolo's <i>The Creation of the World and the Expulsion from Paradise (1445)</i>, Lehman Collection, Metropolitan Museum of Art (Acc. num. 1975.1.31). Public domain image reused from <a href="http://en.wikipedia.org/wiki/File:Creation-and-the-expulsion-from-the-paradise-11291.jpg">Wikimedia Commons</a>.</p>
@@ -223,7 +223,7 @@ and <span rel="dcterms:creator"><a rel="dcterms:identifier" href="http://viaf.or
 <p id="p27" rel="dcterms:hasPart" resource="#p27">A recent careful study has demonstrated that the graduation of at least one of the two extant front dial rings, the Egyptian calendar ring and the zodiac ring, had a small apparently systematic nonuniformity, which can be explained as a deliberate nonuniform spacing of the degrees on the zodiac ring so that a uniformly revolving mean Sun pointer would simultaneously indicate both the true Sun's longitude and the Egyptian calendar date.<sup><a class="endnoteref" id="endnoteref27" href="#endnote27">27</a></sup> On this hypothesis, the motion of pointers representing the motions of the Moon and planets would incorporate a solar anomaly component (a not inconceivable notion, though contrary to known ancient theories) unless the pointers revolved around an eccentric axis. An alternative planetary display also explored in that study hypothesizes that there were no pointers for the planets revolving around the zodiac dial, but instead a system of five subsidiary dials with uniformly revolving pointers indicating the planets' synodic cycles. We believe that the inscriptional evidence examined below rules out such subsidiary dials. Moreover, the division of circles into ostensibly equal arcs elsewhere in the Mechanism is sometimes evidently nonuniform, for example in the spacing of teeth on gears,<sup><a class="endnoteref" id="endnoteref28" href="#endnote28">28</a></sup> the holes for mounting the Egyptian calendar dial,<sup><a class="endnoteref" id="endnoteref29" href="#endnote29">29</a></sup> and the divisions of the Saros eclipse dial, as we have confirmed from observations of the X-ray CT data. Hence we are not convinced that the Mechanism's designer intentionally represented solar anomaly through nonuniform graduation of the zodiac ring instead of by epicyclic gearwork and we have reconstructed all the pointers as radiating from the central axis.</p>
 
 
-<figure id="p28" rel="dcterms:hasPart" resource="#p28"><img alt="" src="images/figure04.jpg" />
+<figure id="figure04" rel="dcterms:hasPart" resource="#p28"><img id="p28" alt="" src="images/figure04.jpg" />
 
 <figcaption>
 <p id="p29" rel="dcterms:hasPart" resource="#p29" class="figure_title"><b>Fig. 4 The <i>Cosmos</i> on the front of the Antikythera Mechanism. ©2011 Tony Freeth, Images First Ltd. All rights reserved.</b></p>
@@ -346,7 +346,7 @@ and <span rel="dcterms:creator"><a rel="dcterms:identifier" href="http://viaf.or
 <p id="p67" rel="dcterms:hasPart" resource="#p67" style="margin-left:2.55em">circle of Phainôn, [the star of Kronos], and the little sphere…</p>
 
 <p id="p68" rel="dcterms:hasPart" resource="#p68" style="margin-left:2.55em;margin-bottom:2em;position:relative"><span style="position:absolute;left:-1.5em">25	</span>… Alongside the Cosmos lies…</p>
-<figure>
+<figure id="figure05">
 <p id="p69" rel="dcterms:hasPart" resource="#p69"><img alt="" src="images/figure05a.png" id="figure05a" name="Picture 45" width="468" height="407" /></p>
 
 <p id="p70" rel="dcterms:hasPart" resource="#p70"><img alt="" src="images/figure05b.jpg" id="figure05b" name="Picture 71" width="468" height="407" /></p>
@@ -438,7 +438,7 @@ and <span rel="dcterms:creator"><a rel="dcterms:identifier" href="http://viaf.or
 
 <p id="p83" rel="dcterms:hasPart" resource="#p83">All the following remarks are founded on close observation of the scientific evidence and extrapolation from this evidence. Because of the great loss of material, much of the reconstruction of the planetary mechanisms can only be conjectural, but we believe that our proposed model is well-founded because it complies closely with the surviving evidence, both in its conception and its mechanical realization.</p>
 
-<figure id="p84" rel="dcterms:hasPart" resource="#p84"><img id="figure06" alt="" src="images/figure06.jpg"/>
+<figure id="figure06" rel="dcterms:hasPart" resource="#p84"><img id="p84"  alt="" src="images/figure06.jpg"/>
 
 <figcaption><p id="p85" rel="dcterms:hasPart" resource="#p85" class="figure_title">Fig. 6 Schematic Gear Diagram (adapted from Freeth, Jones, Steele, &amp; Bitsakis 2008, Supplementary Notes, 21.)</p>
 
@@ -499,7 +499,7 @@ and <span rel="dcterms:creator"><a rel="dcterms:identifier" href="http://viaf.or
 
 <p id="p100" rel="dcterms:hasPart" resource="#p100">The lunar anomaly mechanism is the most remarkable part of the surviving gearing. It has two input gear trains. The first calculates the mean sidereal rotation of the Moon as calculated from the Metonic cycle that 254 mean sidereal months are almost exactly the same as 19 years. The second input gear train calculates a rotation, which is the difference of the rotation of the sidereal Moon and the anomalistic Moon—in modern terms, this is the same as the rotation of the <i>Line of Apsides</i> of the Moon. This parameter can be calculated from a combination of the Metonic and Saros cycles as (9 x 53)/(19 x 223).<sup><a class="endnoteref" id="endnoteref53" href="#endnote53">53</a></sup></p>
 
-<figure id="p101" rel="dcterms:hasPart" resource="#p101"><img alt="" src="images/m6212d5df.png" name="Picture 38" width="266" height="417" />
+<figure id="figure08" rel="dcterms:hasPart" resource="#p101"><img id="p101" alt="" src="images/m6212d5df.png" name="Picture 38" width="266" height="417" />
 <figcaption>
 <p id="p102" rel="dcterms:hasPart" resource="#p102" class="figure_title">Fig. 8 Diagram of the lunar anomaly mechanism (from Freeth <i>et al.</i> 2006, 590). ©2005 Antikythera Mechanism Research Project. All rights reserved.</p>
 
@@ -507,7 +507,7 @@ and <span rel="dcterms:creator"><a rel="dcterms:identifier" href="http://viaf.or
 
 <p id="p104" rel="dcterms:hasPart" resource="#p104">Gears e5, e6, k1, k2 all have 50 teeth. Gear e5 turns at the rate of the mean sidereal Moon, as calculated by the Metonic cycle—in other words, 254/19 rotations per year. e5 meshes with k1, which is mounted epicyclically on e3. Gear k1 has a pin on its face that engages with a slot on k2.<sup><a class="endnoteref" id="endnoteref54" href="#endnote54">54</a></sup> The gears turn on axes that are eccentric to each other by just over a millimetre. The result is that k2 turns with a variable motion. This variable motion is transmitted to e6 and thence to a pointer on the Zodiac Dial.<sup><a class="endnoteref" id="endnoteref55" href="#endnote55">55</a></sup> The period of the variable motion is mediated by the epicyclic mounting of k1 and k2 on e3, which rotates at a rate that is the difference between the sidereal and anomalistic month rotations.  The effect of this is to make the variability of the motion have the period of the anomalistic month. This means that the system models the ancient Greek deferent and epicycle model of lunar motion or the kinematically equivalent eccentre model (both of which were known in the mid 2nd century BC). It is difficult to understand how this superbly economical mechanical design was conceived. It is by no means the obvious way of modelling the deferent and epicycle theory of lunar motion.</p>
 
-<figure id="p105" rel="dcterms:hasPart" resource="#p105"><img alt="" src="images/figure09.jpg" id="figure09"  /></p>
+<figure id="figure09" rel="dcterms:hasPart" resource="#p105"><img  id="p105" alt="" src="images/figure09.jpg"/></p>
 <figcaption>
 <p id="p106" rel="dcterms:hasPart" resource="#p106" class="figure_title">Fig. 9 Fragment A-2, showing the lunar anomaly mechanism. ©2005 Antikythera Mechanism Research Project. All rights reserved.</p>
 
@@ -523,7 +523,7 @@ and <span rel="dcterms:creator"><a rel="dcterms:identifier" href="http://viaf.or
 
 <h3>2.5. Main Drive Wheel</h3>
 
-<figure id="p109" rel="dcterms:hasPart" resource="#p109"><img alt="" src="images/figure10.jpg" id="figure10"  /></p>
+<figure id="figure10" rel="dcterms:hasPart" resource="#p109"><img alt="" src="images/figure10.jpg" id="p109"/></p>
 <figcaption>
 <p id="p110" rel="dcterms:hasPart" resource="#p110" class="figure_title">Fig. 10 Fragment A-1 of the Antikythera Mechanism. ©2005 Antikythera Mechanism Research Project. All rights reserved.</p>
 
@@ -541,7 +541,7 @@ and <span rel="dcterms:creator"><a rel="dcterms:identifier" href="http://viaf.or
 
 <h3>2.6. Fitments and bearings on the spokes of the Main Drive Wheel</h3>
 
-<figure id="p115" rel="dcterms:hasPart" resource="#p115"><img alt="" src="images/figure11.jpg" id="figure11" /></p>
+<figure id="figure11" rel="dcterms:hasPart" resource="#p115"><img alt="" src="images/figure11.jpg" id="p115"  /></p>
 <figcaption>
 <p id="p116" rel="dcterms:hasPart" resource="#p116" class="figure_title">Fig. 11 PTM of Fragment A-1 using specular enhancement. ©2005 Antikythera Mechanism Research Project. All rights reserved.</p>
 
@@ -914,7 +914,7 @@ and <span rel="dcterms:creator"><a rel="dcterms:identifier" href="http://viaf.or
 	</tr>
 </table>
 
-<figure id="p210" rel="dcterms:hasPart" resource="#p210"><img alt="" src="images/figure23.png" id="figure23"  /></p>
+<figure id="figure23" rel="dcterms:hasPart" resource="#p210"><img alt="" src="images/figure23.png" id="p210"/></p>
 <figcaption>
 <p id="p211" rel="dcterms:hasPart" resource="#p211" class="figure_title">Fig. 23 Computer reconstruction of the Main Drive Wheel, b1, and Input Crown Wheel, a1. ©2011 Tony Freeth, Images First Ltd. All rights reserved.</p>
 
@@ -984,7 +984,7 @@ and <span rel="dcterms:creator"><a rel="dcterms:identifier" href="http://viaf.or
 
 <p id="p224" rel="dcterms:hasPart" resource="#p224">During the second century BC, Greek astronomers seeking geometrical models to describe the motions of the Sun, Moon, and planets employed geocentric models that may be described anachronistically as representing a heavenly body's position relative to the Earth as the sum of two uniformly rotating vectors of constant length.<sup><a class="endnoteref" id="endnoteref63" href="#endnote63">63</a></sup> When a planetary model of this kind is translated into a heliocentric system, one of the vectors turns out to represent the planet's mean revolution around the Sun (i.e. treating its orbit as perfectly circular), and the other represents the negative of the Earth's mean revolution around the Sun. Since the vectors can be added in either order, each body's motion can be effected by two geometrical models that result in identical paths for the body while suggesting distinct physical interpretations. Taking the longer vector as the primary revolution around the Earth, and the shorter vector as a secondary revolution superimposed on the primary revolution, we obtain the <i>deferent</i><i> </i><i>and epicycle </i>model, where the body revolves uniformly along an epicyclic circle whose centre revolves uniformly along a deferent circle concentric with the Earth. Reversing the role of the vectors, we obtain the <i>eccentre</i> model, where the body revolves uniformly along a circular orbit that encloses the Earth but is not concentric with it, while the centre of the orbit revolves uniformly around the Earth. Greek astronomers appear to have preferred the deferent and epicycle model for the two inferior planets, Venus and Mercury (see Fig. 26), probably because it gave an intuitive explanation of the fact that these planets alternately run ahead and behind the Sun without ever surpassing a certain maximum elongation from it.</p>
 
-<figure id="p225" rel="dcterms:hasPart" resource="#p225"><img id="figure25" alt="" src="images/1414e060.png" name="Picture 12" width="214" height="369">
+<figure id="figure25" rel="dcterms:hasPart" resource="#p225"><img id="p225" alt="" src="images/1414e060.png" name="Picture 12" width="214" height="369">
 <figcaption>
 <p id="p226" rel="dcterms:hasPart" resource="#p226" class="figure_title">Fig. 25 Deferent and epicycle model for an inferior planet. ©2011 Tony Freeth, Images First Ltd. All rights reserved.</p>
 
@@ -992,7 +992,7 @@ and <span rel="dcterms:creator"><a rel="dcterms:identifier" href="http://viaf.or
 
 <p id="p228" rel="dcterms:hasPart" resource="#p228">For the superior planets, the Greeks employed both varieties of model (Fig. 26). Assuming deferent and epicycle models for the superior planets resulted in a system in which all five planets revolve on epicycles, whereas assuming eccentre models resulted in a system in which the mean Sun plays the same role for all five planets. (The eccentre models can be thought of as &quot;extreme&quot; epicyclic models in which the epicycle has become so large that the Earth is inside it.)</p>
 
-<figure id="p229" rel="dcterms:hasPart" resource="#p229"><img alt="" src="images/m55edcc24.png" name="Picture 4" width="345" height="418" />
+<figure id="figure26" rel="dcterms:hasPart" resource="#p229"><img alt="" id="p229" src="images/m55edcc24.png" name="Picture 4" width="345" height="418" />
 <figcaption>
 <p id="p230" rel="dcterms:hasPart" resource="#p230" class="figure_title">Fig. 26 Deferent and epicycle model (black) and equivalent eccentre model (red) for a superior planet. ©2011 Tony Freeth, Images First Ltd. All rights reserved.</p>
 
@@ -1349,7 +1349,7 @@ and <span rel="dcterms:creator"><a rel="dcterms:identifier" href="http://viaf.or
 
 <h4>3.3.2. Inferior Planet Mechanisms</h4>
 
-<figure id="p325" rel="dcterms:hasPart" resource="#p325"><img id="figure28" alt="" src="images/figure28.jpg" name="Picture 16" width="318" height="335"  />
+<figure id="figure28" rel="dcterms:hasPart" resource="#p325"><img id="p325" alt="" src="images/figure28.jpg" name="Picture 16" width="318" height="335"  />
 <figcaption>
 <p id="p326" rel="dcterms:hasPart" resource="#p326" class="figure_title">Fig. 28 Computer model of Venus mechanism. (Reproduced with permission, Freeth 2002, 47.)</p>
 
@@ -1844,7 +1844,7 @@ also be constructed for Jupiter and Saturn.</p>
 
 <p id="p458" rel="dcterms:hasPart" resource="#p458">The designer might have hoped that, after going through the immense trouble of building the Mechanism and calibrating it, the outputs would stay accurate for many years. However, neither the science nor the technology of the era of the Antikythera Mechanism could really be described as “exact”—both the science and the mechanical realization of its predictions were very inaccurate.</p>
 
-<figure id="p459" rel="dcterms:hasPart" resource="#p459"><img id="figure39" alt="" src="images/figure39.gif"  width="569" height="369" />
+<figure id="figure39" rel="dcterms:hasPart" resource="#p459"><img id="p459" alt="" src="images/figure39.gif"  width="569" height="369" />
 <figcaption>
 <p id="p460" rel="dcterms:hasPart" resource="#p460" class="figure_title">Fig. 39 Errors in deferent and epicycle theory for the planet Mars, middle seven retrogrades in 1st century BC.</p>
 
@@ -1864,7 +1864,7 @@ also be constructed for Jupiter and Saturn.</p>
 
 <p id="p465" rel="dcterms:hasPart" resource="#p465" style="margin-left: 0.39in; margin-right: 0.39in"><i>...a voice comes to you speaking. Let the stars be set upon the board in accordance with [their] nature except for the Sun and Moon. And let the Sun be golden, the Moon silver, Kronos of obsidian, Ares of reddish onyx, Aphrodite lapis lazuli veined with gold, Hermes turquoise; let Zeus be of (whitish?) stone, crystalline (?)... </i></p>
 
-<figure id="p466" rel="dcterms:hasPart" resource="#p466"><img alt="" src="images/m600782be.jpg" name="Picture 96" width="564" height="568"  />
+<figure id="figure40" rel="dcterms:hasPart" resource="#p466"><img alt="" id="p466" src="images/m600782be.jpg" name="Picture 96" width="564" height="568"  />
 
 <figcaption id="p467" rel="dcterms:hasPart" resource="#p467" class="figure_title">Fig. 40 Computer model of geocentric display of Sun, Moon and planets. ©2011 Tony Freeth, Images First Ltd. All rights reserved.</figcaption></figure>
 
