--- a/isaw-papers-4/isaw-papers-4.xhtml
+++ b/isaw-papers-4/isaw-papers-4.xhtml
@@ -523,7 +523,7 @@ and <span rel="dcterms:creator"><a rel="dcterms:identifier" href="http://viaf.or
 
 <h3>2.5. Main Drive Wheel</h3>
 
-<figure id="figure10" rel="dcterms:hasPart" resource="#p109"><img alt="" src="images/figure10.jpg" id="p109"/></p>
+<figure id="figure10" rel="dcterms:hasPart" resource="#p109"><img alt="" src="images/figure10.jpg" id="p109"/>
 <figcaption>
 <p id="p110" rel="dcterms:hasPart" resource="#p110" class="figure_title">Fig. 10 Fragment A-1 of the Antikythera Mechanism. ©2005 Antikythera Mechanism Research Project. All rights reserved.</p>
 
@@ -541,7 +541,7 @@ and <span rel="dcterms:creator"><a rel="dcterms:identifier" href="http://viaf.or
 
 <h3>2.6. Fitments and bearings on the spokes of the Main Drive Wheel</h3>
 
-<figure id="figure11" rel="dcterms:hasPart" resource="#p115"><img alt="" src="images/figure11.jpg" id="p115"  /></p>
+<figure id="figure11" rel="dcterms:hasPart" resource="#p115"><img alt="" src="images/figure11.jpg" id="p115"  />
 <figcaption>
 <p id="p116" rel="dcterms:hasPart" resource="#p116" class="figure_title">Fig. 11 PTM of Fragment A-1 using specular enhancement. ©2005 Antikythera Mechanism Research Project. All rights reserved.</p>
 
@@ -914,7 +914,7 @@ and <span rel="dcterms:creator"><a rel="dcterms:identifier" href="http://viaf.or
 	</tr>
 </table>
 
-<figure id="figure23" rel="dcterms:hasPart" resource="#p210"><img alt="" src="images/figure23.png" id="p210"/></p>
+<figure id="figure23" rel="dcterms:hasPart" resource="#p210"><img alt="" src="images/figure23.png" id="p210"/>
 <figcaption>
 <p id="p211" rel="dcterms:hasPart" resource="#p211" class="figure_title">Fig. 23 Computer reconstruction of the Main Drive Wheel, b1, and Input Crown Wheel, a1. ©2011 Tony Freeth, Images First Ltd. All rights reserved.</p>
 
@@ -984,7 +984,7 @@ and <span rel="dcterms:creator"><a rel="dcterms:identifier" href="http://viaf.or
 
 <p id="p224" rel="dcterms:hasPart" resource="#p224">During the second century BC, Greek astronomers seeking geometrical models to describe the motions of the Sun, Moon, and planets employed geocentric models that may be described anachronistically as representing a heavenly body's position relative to the Earth as the sum of two uniformly rotating vectors of constant length.<sup><a class="endnoteref" id="endnoteref63" href="#endnote63">63</a></sup> When a planetary model of this kind is translated into a heliocentric system, one of the vectors turns out to represent the planet's mean revolution around the Sun (i.e. treating its orbit as perfectly circular), and the other represents the negative of the Earth's mean revolution around the Sun. Since the vectors can be added in either order, each body's motion can be effected by two geometrical models that result in identical paths for the body while suggesting distinct physical interpretations. Taking the longer vector as the primary revolution around the Earth, and the shorter vector as a secondary revolution superimposed on the primary revolution, we obtain the <i>deferent</i><i> </i><i>and epicycle </i>model, where the body revolves uniformly along an epicyclic circle whose centre revolves uniformly along a deferent circle concentric with the Earth. Reversing the role of the vectors, we obtain the <i>eccentre</i> model, where the body revolves uniformly along a circular orbit that encloses the Earth but is not concentric with it, while the centre of the orbit revolves uniformly around the Earth. Greek astronomers appear to have preferred the deferent and epicycle model for the two inferior planets, Venus and Mercury (see Fig. 26), probably because it gave an intuitive explanation of the fact that these planets alternately run ahead and behind the Sun without ever surpassing a certain maximum elongation from it.</p>
 
-<figure id="figure25" rel="dcterms:hasPart" resource="#p225"><img id="p225" alt="" src="images/1414e060.png" name="Picture 12" width="214" height="369">
+<figure id="figure25" rel="dcterms:hasPart" resource="#p225"><img id="p225" alt="" src="images/1414e060.png" name="Picture 12" width="214" height="369"/>
 <figcaption>
 <p id="p226" rel="dcterms:hasPart" resource="#p226" class="figure_title">Fig. 25 Deferent and epicycle model for an inferior planet. ©2011 Tony Freeth, Images First Ltd. All rights reserved.</p>
 
