missing figure id in paper 13

--- a/isaw-papers-13/isaw-papers-13.xhtml
+++ b/isaw-papers-13/isaw-papers-13.xhtml
@@ -594,7 +594,7 @@
 
 <p id="p30" rel="dcterms:hasPart" resource="#p30">Figure 1 includes <i>antoniniani</i>, which represent the majority of overall coin finds, as noted above. Since this coinage was not minted before 215 CE, this skews the results towards the right half of the graph. Still, it is notable that there is an uneven distribution throughout the period when <i>antoniniani</i> were being minted in great numbers, after about 235 CE. Coins from the 260s and 270s are by far the most numerous of any category, representing 21% and 37% of the total, respectively. This further demonstrates that, while <i>antoniniani</i> came to dominate the circulation pattern of Africa as it did in the rest of the western Empire, this dominance did not occur until the 250s at earliest, well into the period when <i>antoniniani</i> were being minted. The relatively stable circulation pattern enjoyed by Africa is illustrated more plainly in Figure 2, which is a breakdown of coins by decade in which they were minted not including <i>antoniniani</i>. This Figure shows that nearly all decades of the high imperial period are well represented.</p>
 
-<figure>
+<figure id="figure02">
 <img id="img02" src="images/figure02.png" />
 <figcaption><b>Figure 2.</b> Number of African coins by mint date, not including <i>antoniniani</i> (n=13,477)</figcaption>
 </figure>
