--- a/isaw-papers-21/isaw-papers-21.xhtml
+++ b/isaw-papers-21/isaw-papers-21.xhtml
@@ -299,11 +299,11 @@ Your browser does not support the video tag.
 
 <p class="footnote" id="footnote-2"><sup><a href="#footnote-reference-2">2</a></sup> Rivero et al. 2019; Solem and Nau 2020.</p>
 
-<p class="footnote" id="footnote-3"><sup><a href="#footnote-reference-3">3</a></sup> Cultural Heritage Advanced Research Infrastructures: Synergy for a Multidisciplinary Approach to Conservation/Restoration (http://www.charismaproject.eu/)</p>
+<p class="footnote" id="footnote-3"><sup><a href="#footnote-reference-3">3</a></sup> Cultural Heritage Advanced Research Infrastructures: Synergy for a Multidisciplinary Approach to Conservation/Restoration (&lt;<a href="http://www.charismaproject.eu/">http://www.charismaproject.eu/</a>&gt;)</p>
 
-<p class="footnote" id="footnote-4"><sup><a href="#footnote-reference-4">4</a></sup> The latest version of the CHARISMA software can be downloaded at <a href="https://github.com/jcupitt/bm-workspaces">https://github.com/jcupitt/bm-workspaces</a>. We have confirmed that the process we describe works when using <i>Blender</i> 2.93 LTS, the most recent version available at the time of publication. The latest version of Blender can be downloaded from <a href="https://blender.org">https://blender.org</a>.</p>
+<p class="footnote" id="footnote-4"><sup><a href="#footnote-reference-4">4</a></sup> The latest version of the CHARISMA software can be downloaded at <a href="https://github.com/jcupitt/bm-workspaces">https://github.com/jcupitt/bm-workspaces</a>. We have confirmed that the process we describe works when using <i>Blender</i> 2.93 LTS, the most recent version available at the time of publication. The latest version of Blender can be downloaded from &lt;<a href="https://blender.org">https://blender.org</a>&gt;.</p>
 
-<p class="footnote" id="footnote-5"><sup><a href="#footnote-reference-5">5</a></sup> The video available at https://doi.org/10.5281/zenodo.1729569 (see note 1 above), while also not a full tutorial, may be useful for anyone pursuing their own application of the workflow described here.</p>
+<p class="footnote" id="footnote-5"><sup><a href="#footnote-reference-5">5</a></sup> The video is available at &lt;<a href="https://doi.org/10.5281/zenodo.1729569">https://doi.org/10.5281/zenodo.1729569</a>&gt; (see note 1 above), while also not a full tutorial, may be useful for anyone pursuing their own application of the workflow described here.</p>
 
 <p class="footnote" id="footnote-6"><sup><a href="#footnote-reference-6">6</a></sup> Cosentino et al. 2015; Mudge et al. 2010; Mytum and Peterson 2018; Olson et al. 2013.</p>
 
@@ -311,7 +311,7 @@ Your browser does not support the video tag.
 
 <p class="footnote" id="footnote-8"><sup><a href="#footnote-reference-8">8</a></sup> Elfaragy et al. 2013.</p>
 
-<p class="footnote" id="footnote-9"><sup><a href="#footnote-reference-9">9</a></sup> Cultural Heritage Imaging, <i>Photogrammetry</i>, (n.d.), <a href="http://culturalheritageimaging.org/Technologies/Photogrammetry/" class="Standard">http://culturalheritageimaging.org/Technologies/Photogrammetry/</a>.</p>
+<p class="footnote" id="footnote-9"><sup><a href="#footnote-reference-9">9</a></sup> Cultural Heritage Imaging, <i>Photogrammetry</i>, (n.d.), &lt;<a href="http://culturalheritageimaging.org/Technologies/Photogrammetry/" >http://culturalheritageimaging.org/Technologies/Photogrammetry/</a>&gt;.</p>
 
 <p class="footnote" id="footnote-10"><sup><a href="#footnote-reference-10">10</a></sup> Malzbender et al. 2001.</p>
 
@@ -331,7 +331,7 @@ Your browser does not support the video tag.
 
 <p class="footnote" id="footnote-18"><sup><a href="#footnote-reference-18">18</a></sup> Dellepiane 2011; Gilboa et al. 2013; Carrero-Pazos and Espinosa-Espinosa 2018.</p>
 
-<p class="footnote" id="footnote-19"><sup><a href="#footnote-reference-19">19</a></sup> The original .mov file and two converted versions are available at <a href="http://hdl.handle.net/2451/62240">http://hdl.handle.net/2451/62240</a>.</p>
+<p class="footnote" id="footnote-19"><sup><a href="#footnote-reference-19">19</a></sup> The original .mov file and two converted versions are available at &lt;<a href="http://hdl.handle.net/2451/62240">http://hdl.handle.net/2451/62240</a>&gt;.</p>
 
 <p class="footnote" id="footnote-20"><sup><a href="#footnote-reference-20">20</a></sup> Banducci et al. 2018; Eschenbrenner-Diemer 2013; Murphy and Poblome 2012.</p>
 
@@ -350,7 +350,7 @@ Your browser does not support the video tag.
 
 <p id="reference-3" class="work-cited" rel="dcterms:references" typeof="dcterms:BibliographicResource"><span property="dcterms:bibliographicCitation">Carrero-Pazos, M. and D. Espinosa-Espinosa. (2018). “Back to basics: a non-photorealistic rendering method for the analysis of texts from 3D Roman inscriptions,” <i>Antiquity</i> 92(364): e7. &lt;<a href="https://doi.org/10.15184/aqy.2018.146" class="Standard">https://doi.org/10.15184/aqy.2018.146</a>&gt;.</span></p>
 
-<p id="reference-4" class="work-cited" rel="dcterms:references" typeof="dcterms:BibliographicResource"><span property="dcterms:bibliographicCitation">Cosentino, A., Sgarlata, M., Scandurra, C., Stout, S., Galizia, M., and Santagati, C. (2015). Multidisciplinary Investigations on the Byzantine Oratory of the Catacombs of Saint Lucia in Syracuse. In G. Guidi, R. Scopigno, and J. Barceló (Eds.), <i>International Congress on Digital Heritage - Theme 3 - Analysis and Interpretation</i> (137-140). IEEE. &lt;<a href="https://doi.org/10.1109/DigitalHeritage.2015.7419471" class="Standard">https://doi.org/10.1109/DigitalHeritage.2015.7419471</a>&gt;.</span></p>
+<p id="reference-4" class="work-cited" rel="dcterms:references" typeof="dcterms:BibliographicResource"><span property="dcterms:bibliographicCitation">Cosentino, A., Sgarlata, M., Scandurra, C., Stout, S., Galizia, M., and Santagati, C. (2015). Multidisciplinary Investigations on the Byzantine Oratory of the Catacombs of Saint Lucia in Syracuse. In G. Guidi, R. Scopigno, and J. Barceló (Eds.), <i>International Congress on Digital Heritage - Theme 3 - Analysis and Interpretation</i> (137-140). IEEE. &lt;<a href="https://doi.org/10.1109/DigitalHeritage.2015.7419471">https://doi.org/10.1109/DigitalHeritage.2015.7419471</a>&gt;.</span></p>
 
 <p id="reference-5" class="work-cited" rel="dcterms:references" typeof="dcterms:BibliographicResource"><span property="dcterms:bibliographicCitation">Cultural Heritage Imaging. (2011). <i>Reflectance Transformation Imaging: Guide to Highlight Image Processing</i>. &lt;<a href="http://culturalheritageimaging.org/What_We_Offer/Downloads/rtibuilder/RTI_hlt_Processing_Guide_v14_beta.pdf">http://culturalheritageimaging.org/What_We_Offer/&#8203;Downloads/rtibuilder/RTI_hlt_Processing_Guide_v14_beta.pdf</a>&gt;</span></p>
 
@@ -362,7 +362,7 @@ Your browser does not support the video tag.
 
 <p id="reference-9" class="work-cited" rel="dcterms:references" typeof="dcterms:BibliographicResource"><span property="dcterms:bibliographicCitation">Di Giuseppantonio Di Franco, P., F. Galeazzi and V. Vassallo , eds. 2018. <i>Authenticity and Cultural Heritage in the Age of 3D Digital Reproductions.</i> Cambridge: McDonald Institute for Archaeological Research.</span></p>
 
-<p id="reference-10" class="work-cited" rel="dcterms:references" typeof="dcterms:BibliographicResource"><span property="dcterms:bibliographicCitation">Dyer, J., Verri, G., and Cupitt, J. (2013). <i>Multispectral Imaging in Reflectance and Photo-Induced Luminescence Modes: A User Manual</i>. The British Museum, Charisma Project. <a href="https://www.britishmuseum.org/pdf/charisma-multispectral-imaging-manual-2013.pdf" class="Standard">https://www.britishmuseum.org/pdf/charisma-multispectral-imaging-manual-2013.pdf</a>.</span></p>
+<p id="reference-10" class="work-cited" rel="dcterms:references" typeof="dcterms:BibliographicResource"><span property="dcterms:bibliographicCitation">Dyer, J., Verri, G., and Cupitt, J. (2013). <i>Multispectral Imaging in Reflectance and Photo-Induced Luminescence Modes: A User Manual</i>. The British Museum, Charisma Project. &lt;<a href="https://www.britishmuseum.org/pdf/charisma-multispectral-imaging-manual-2013.pdf" class="Standard">https://www.britishmuseum.org/pdf/charisma-multispectral-imaging-manual-2013.pdf</a>&gt;.</span></p>
 
 <p id="reference-11" class="work-cited" rel="dcterms:references" typeof="dcterms:BibliographicResource"><span property="dcterms:bibliographicCitation">Elfaragy, M. , A. Rizq., and M. Rashwan. (2013). “3D Surface Reconstruction Using Polynomial Texture Mapping,” in <i>Advances in Visual Computing. ISVC 2013,</i> ed. G. Bebis G. et al. (353-362). Berlin: Springer.</span></p>
 
@@ -372,7 +372,7 @@ Your browser does not support the video tag.
 
 <p id="reference-14" class="work-cited" rel="dcterms:references" typeof="dcterms:BibliographicResource"><span property="dcterms:bibliographicCitation">Frank, E. and B. Castriota. (2021) Fifty-plus years of on-site metals conservation at Sardis: Correlating treatment efficacy and implementing new approaches. <i>Transcending Boundaries: Integrated Approaches to Conservation. Preprints of the ICOM-CC 19th Triennial Conference.</i> Beijing, China (virtual). In Press.</span></p>
 
-<p id="reference-15" class="work-cited" rel="dcterms:references" typeof="dcterms:BibliographicResource"><span property="dcterms:bibliographicCitation">Gartski, K. (2016). Virtual Representation: the Production of 3D Digital Artifacts. <i>Journal of Archaeological Method and Theory</i>, 24(3): 726-750. <a href="https://doi.org/10.1007/s10816-016-9285-z">https://doi.org/10.1007/s10816-016-9285-z</a></span></p>
+<p id="reference-15" class="work-cited" rel="dcterms:references" typeof="dcterms:BibliographicResource"><span property="dcterms:bibliographicCitation">Gartski, K. (2016). Virtual Representation: the Production of 3D Digital Artifacts. <i>Journal of Archaeological Method and Theory</i>, 24(3): 726-750. &lt;<a href="https://doi.org/10.1007/s10816-016-9285-z">https://doi.org/10.1007/s10816-016-9285-z</a>&gt;</span></p>
 
 <p id="reference-16" class="work-cited" rel="dcterms:references" typeof="dcterms:BibliographicResource"><span property="dcterms:bibliographicCitation">Gilboa, A., A. Tal, I. Shimshoni, and M. Kolomenkin. (2013). Computer-based, automatic recording and illustration of complex archaeological artifacts. <i>Journal of Archaeological Science</i> 40(2)): 1329-1339.</span></p>
 
@@ -388,11 +388,11 @@ Your browser does not support the video tag.
 
 <p id="reference-22" class="work-cited" rel="dcterms:references" typeof="dcterms:BibliographicResource"><span property="dcterms:bibliographicCitation">Miles, J., Pitts, M., Pagi, H., and Earl, G. (2015). Photogrammetry and RTI Survey of Hoa Hakananai’a Easter Island Statue. In A. Traviglia (Ed.), <i>Across Space and Time: Papers from the 41st Conference on Computer Applications and Quantitative Methods in Archaeology, Perth, 25-28 March 2013</i> (144-155). Amsterdam: Amsterdam University Press.</span></p>
 
-<p id="reference-23" class="work-cited" rel="dcterms:references" typeof="dcterms:BibliographicResource"><span property="dcterms:bibliographicCitation">Morris, C., Peatfield, A., and O’Neill, B. (2018). ‘Figures in 3D:’ Digital Perspectives on Cretan Bronze Age Figurines. Open Archaeology, 4(1). &lt;<a href="https://doi.org/10.1515/opar-2018-0003" class="Standard">https://doi.org/10.1515/opar-2018-0003</a>&gt;</span></p>
+<p id="reference-23" class="work-cited" rel="dcterms:references" typeof="dcterms:BibliographicResource"><span property="dcterms:bibliographicCitation">Morris, C., Peatfield, A., and O’Neill, B. (2018). ‘Figures in 3D:’ Digital Perspectives on Cretan Bronze Age Figurines. Open Archaeology, 4(1). &lt;<a href="https://doi.org/10.1515/opar-2018-0003">https://doi.org/10.1515/opar-2018-0003</a>&gt;</span></p>
 
 <p id="reference-24" class="work-cited" rel="dcterms:references" typeof="dcterms:BibliographicResource"><span property="dcterms:bibliographicCitation">Mudge, M. (2017). Advantages of Integrated RTI and Photogrammetric Acquisition. Presentation at Illumination of Material Culture: A Symposium on Computational Photography and Reflectance Transformation Imaging (RTI), New York, NY, March 7-8, 2017.</span></p>
 
-<p id="reference-25" class="work-cited" rel="dcterms:references" typeof="dcterms:BibliographicResource"><span property="dcterms:bibliographicCitation">Mudge, M., Schroer, C., Earl, G., Martinez, K, Pagi, H, Toler-Franklin, C, Rusinkiewicz, S, Palma, G, Wachowiak, M, and Ashley, M. (2010). Principles and Practices of Robust, Photography-Based Digital Imaging Techniques for Museums. In <i>11th VAST International Symposium on Virtual Reality, Archaeology and Cultural Heritage, France, 21-24 September 2010</i>. University of Southampton, 27 pages. <a href="http://eprints.ecs.soton.ac.uk/21658/">http://eprints.ecs.soton.ac.uk/21658/</a></span></p>
+<p id="reference-25" class="work-cited" rel="dcterms:references" typeof="dcterms:BibliographicResource"><span property="dcterms:bibliographicCitation">Mudge, M., Schroer, C., Earl, G., Martinez, K, Pagi, H, Toler-Franklin, C, Rusinkiewicz, S, Palma, G, Wachowiak, M, and Ashley, M. (2010). Principles and Practices of Robust, Photography-Based Digital Imaging Techniques for Museums. In <i>11th VAST International Symposium on Virtual Reality, Archaeology and Cultural Heritage, France, 21-24 September 2010</i>. University of Southampton, 27 pages. &lt;<a href="http://eprints.ecs.soton.ac.uk/21658/">http://eprints.ecs.soton.ac.uk/21658/</a>&gt;</span></p>
 
 <p id="reference-26" class="work-cited" rel="dcterms:references" typeof="dcterms:BibliographicResource"><span property="dcterms:bibliographicCitation">Murphy, E. and Poblome, J. (2012). Technical and Social Considerations of Tools from Roman-period Ceramic Workshops at Sagalassos (Southwest Turkey): Not Just Tools of the Trade? <i>Journal of Mediterranean Archaeology</i>, 25(2): 197-217.</span></p>
 
@@ -402,9 +402,9 @@ Your browser does not support the video tag.
 
 <p id="reference-29" class="work-cited" rel="dcterms:references" typeof="dcterms:BibliographicResource"><span property="dcterms:bibliographicCitation">Rabinowitz, A. (2015). The work of archaeology in the age of digital surrogacy. In B. Olson and W. Caraher (Eds.), <i>Visions of Substance: 3D Imaging in Mediterranean Archaeology</i> (27-42). Grand Forks: University of North Dakota Digital Press.</span></p>
 
-<p id="reference-30" class="work-cited" rel="dcterms:references" typeof="dcterms:BibliographicResource"><span property="dcterms:bibliographicCitation">Rivera, O., J. Ruiz-López, I. Intxaurbe, S. Salazar, and D. Garate. (2018). On the limits of 3D capture: A new method to approach the photogrammetric recording of palaeolithic thin incised engravings in Atxurra Cave (northern Spain). <i>Digital Applications in Archaeology and Cultural Heritage</i> 14(e0016). <a href="https://doi.org/10.1016/j.daach.2019.e00106">https://doi.org/10.1016/j.daach.2019.e00106</a></span></p>
+<p id="reference-30" class="work-cited" rel="dcterms:references" typeof="dcterms:BibliographicResource"><span property="dcterms:bibliographicCitation">Rivera, O., J. Ruiz-López, I. Intxaurbe, S. Salazar, and D. Garate. (2018). On the limits of 3D capture: A new method to approach the photogrammetric recording of palaeolithic thin incised engravings in Atxurra Cave (northern Spain). <i>Digital Applications in Archaeology and Cultural Heritage</i> 14(e0016). &lt;<a href="https://doi.org/10.1016/j.daach.2019.e00106">https://doi.org/10.1016/j.daach.2019.e00106</a>&gt;</span></p>
 
-<p id="reference-31" class="work-cited" rel="dcterms:references" typeof="dcterms:BibliographicResource"><span property="dcterms:bibliographicCitation">Solem, D.-O. and E. Nau. (2020). Two New Ways of Documenting Miniature Incisions Using a Combination of Image-Based Modelling and Reflectance Transformation Imaging. <i>Remote Sensing</i> 12(1626). <a href="https://doi.org">https://doi.org/10.3390/rs12101626</a></span></p>
+<p id="reference-31" class="work-cited" rel="dcterms:references" typeof="dcterms:BibliographicResource"><span property="dcterms:bibliographicCitation">Solem, D.-O. and E. Nau. (2020). Two New Ways of Documenting Miniature Incisions Using a Combination of Image-Based Modelling and Reflectance Transformation Imaging. <i>Remote Sensing</i> 12(1626). &lt;<a href="https://doi.org">https://doi.org/10.3390/rs12101626</a>&gt;</span></p>
 
 <p id="reference-32" class="work-cited" rel="dcterms:references" typeof="dcterms:BibliographicResource"><span property="dcterms:bibliographicCitation">Stein, C., E. Frank, and S. Heath. (2018). Integrating Multispectral Imaging, Reflectance Transformation Imaging (RTI) and Photogrammetry for Archaeological Objects. In <i>119th Annual Meeting Abstracts</i> (52-53). Boston: Archaeological Institute of America.</span></p>
 
@@ -416,7 +416,7 @@ Your browser does not support the video tag.
 
 <p class="editorial-note"><a rel="dcterms:isPartOf" href="http://isaw.nyu.edu/publications/isaw-papers"><i>ISAW Papers</i></a> (ISSN 2164-1471) is a publication of the <a rel="dcterms:publisher" property="dcterms:publisher" href="http://isaw.nyu.edu">Institute for the Study of the Ancient World</a>, <a href="http://nyu.edu/">New York University</a>. This article was anonymously reviewed prior to publication.</p>
 
-<p class="copyright" style="margin-top:1em;text-align:center;color:gray">©2021 <span rel="cc:attributionName">Emily Frank, Sebastian Heath, and Chantral Stein</span>. Distributed under the terms of the <a rel="cc:license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a> license. Additional rights holders and licenses for figures noted in captions as necessary.</p>
+<p class="copyright" style="margin-top:1em;text-align:center;color:gray">©2021 <span rel="cc:attributionName">Emily Frank, Sebastian Heath, and Chantral Stein</span>. Distributed under the terms of the <a rel="cc:license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a> license.</p>
 
 </footer>
 </article>
